<resources>
    <string name="app_name">Access settings</string>
    <string name="title_allow_access">Choose what to allow App to access</string>
    <string name="storage">access photos, media, and files on your device</string>
    <string name="storage_title">Storage</string>
    <string name="location_title">Location</string>
    <string name="location">access this device\'s location</string>
    <string name="camara">take pictures and record video</string>
    <string name="camara_title">Camera</string>
    <string name="phone_title">Phone</string>
    <string name="Phone">make and manage phone calls</string>
    <string name="contacts_title">Contacts</string>
    <string name="contacts">access your contacts</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="storage_activity_text">STORAGE</string>
    <string name="location_activity_text">LOCATION</string>
    <string name="camara_activity_text">CAMERA</string>
    <string name="phone_activity_text">PHONE</string>
    <string name="contacts_activity_text">CONTACTS</string>
    <string name="snackbar_camara_text">Acceder a la cámara</string>
</resources>