<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/title_allow_access"
            android:layout_width="283dp"
            android:layout_height="59dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/textView"
            android:textSize="18sp"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" android:layout_marginEnd="27dp" android:layout_marginRight="27dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp"/>
    <TextView
            android:text="@string/storage_title"
            android:layout_width="51dp"
            android:layout_height="20dp" android:id="@+id/storage_title_id"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="259dp"
            android:layout_marginRight="259dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="@string/storage"
            android:layout_width="259dp"
            android:layout_height="28dp" android:id="@+id/switch6"
            android:textColor="@android:color/background_light"
            android:textSize="12sp" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/storage_title_id" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
            android:layout_marginStart="101dp"
            android:textColor="@android:color/background_light"
            android:layout_marginEnd="256dp"
            android:layout_marginRight="256dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="7dp" app:layout_constraintTop_toBottomOf="@+id/switch6" android:textStyle="bold"/>
    <Switch
            android:text="@string/location"
            android:layout_width="258dp"
            android:layout_height="29dp" android:id="@+id/switch7"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textColor="@android:color/background_light" android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
            android:layout_marginStart="101dp" android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/camara_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/switch7"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
            android:layout_marginStart="101dp" android:textStyle="bold"
            android:layout_marginEnd="260dp" android:layout_marginRight="260dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="@string/camara"
            android:layout_width="257dp"
            android:layout_height="26dp" android:id="@+id/switch8"
            android:textColor="@android:color/background_light"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
            android:layout_marginStart="101dp" android:layout_marginEnd="52dp" android:layout_marginRight="52dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/switch8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="101dp"
            android:layout_marginStart="101dp" android:layout_marginEnd="270dp" android:layout_marginRight="270dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@android:color/background_light"
            android:textStyle="bold"/>
    <Switch
            android:text="@string/Phone"
            android:layout_width="257dp"
            android:layout_height="27dp" android:id="@+id/switch9"
            android:textSize="12sp"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/contacts_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/switch9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp"
            android:textColor="@android:color/background_light" android:textStyle="bold"
            android:layout_marginEnd="253dp"
            android:layout_marginRight="253dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Switch
            android:text="@string/contacts"
            android:layout_width="258dp"
            android:layout_height="24dp"
            android:id="@+id/switch10"
            android:textColor="@android:color/background_light" android:textSize="12sp"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="101dp" android:layout_marginStart="101dp" android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/continue_btn"
            android:layout_width="88dp"
            android:layout_height="35dp" android:id="@+id/button_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:textSize="12sp"
            android:layout_marginEnd="49dp"
            android:layout_marginRight="49dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@android:color/background_light"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:onClick="when_clicked_continue_btn"/>
    <Button
            android:text="@string/cancel_btn"
            android:layout_width="98dp"
            android:layout_height="35dp" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="156dp"
            android:layout_marginStart="156dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:textSize="12sp"
            style="@style/Widget.AppCompat.Button.Borderless" android:textColor="@android:color/background_light"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="680dp" android:id="@+id/guideline4"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="319dp" android:id="@+id/guideline5"/>

</androidx.constraintlayout.widget.ConstraintLayout>